--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="google">Google</string>
+    <string name="remember_me">Remember me</string>
+    <string name="register">Register</string>
+    <string name="or">or</string>
+    <string name="by_clicking_register_you_agree_to_our_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
+    <string name="by_clicking_register_you_agree_to_our_terms_nand_conditions">By clicking Register you agree to our Terms\nand Conditions</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_in">Sign in</string>
 </resources>
